--- a/templates/audiobooks.html
+++ b/templates/audiobooks.html
@@ -58,8 +58,10 @@ audio {
 <br>
 <div class="container">
     <h1 class="page-title">Audiobooks</h1>
-    <p style="text-align: center;">Discover a wide variety of audiobooks available for streaming.</p>
-
+    <br>
+    <p style="text-align: center; font-size: 1.2em;">Discover a wide variety of audiobooks available for streaming.</p>
+<br>
+<br>
     <div class="grid-container">
         {% if audiobooks %}
         {% for id, audiobook in audiobooks.items() %}
